--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,25 +1,27 @@
 * {
-  font-family: "Montserrat", sans-serif;
-  font-family: "Raleway", sans-serif;
+  font-family: "'Montserrat'", sans-serif;
+  font-family: "'Raleway'", sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* section1 */
 
 .sect1 {
   background-size: cover;
-  /* background-color: #636969;
-  background-repeat: no-repeat;
-  background-attachment: fixed; */
-  background-image: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url("../images/name.jpg");
-  height: 100vh;
+  background-image: linear-gradient(#00000080, #00000080), url("../images/name.jpg");
+  height: 120vh;
+  max-height: 200vh;
+  min-width: 20vw;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .nav {
   padding-top: 15px;
+  width: 40%;
+  min-width: 20%;
 }
 
 a {
@@ -29,7 +31,6 @@ a {
 }
 
 .image img {
-  /* width: 500px; */
   opacity: 0.9;
 }
 
@@ -40,16 +41,9 @@ a {
   padding-right: 300px;
   padding-top: 4%;
   color: white;
-}
-
-.six {
-  width: 0.8%;
-  height: 1.5%;
-  color: white;
-  position: absolute;
-  padding-left: 230px;
-  padding-top: 15px;
-
+  flex-wrap: wrap;
+  width: 100%;
+  min-width: 20%;
 }
 
 .gras {
@@ -67,6 +61,10 @@ h1 {
   font-size: 23px;
 }
 
+.pic {
+  width: 18%;
+}
+
 .class12 {
   padding-top: 3%;
   display: flex;
@@ -74,20 +72,26 @@ h1 {
   gap: 2.5rem;
   color: #fff;
   padding-right: 230px;
+  /* width: 0%; */
 }
 
 .become {
-  display: flex;
-  gap: 4rem;
-  justify-content: center;
-  padding-right: 15px;
-}
-
-h2 {
   border: solid 1px#23a6f0;
   background-color: #23a6f0;
   border-radius: 5px;
-  padding: 5px 20px;
+  display: flex;
+  /* padding-right: 15px; */
+  width: 260px;
+  padding: 10px 1px 10px 10px;
+  flex-wrap: wrap;
+}
+
+.six {
+  width: 9%;
+}
+
+h2 {
+  align-items: center;
 }
 
 .logue {
@@ -109,7 +113,6 @@ h2 {
   border: solid 1px #faf8f8;
   background-color: #7f7f7fff;
   color: #fff;
-
 }
 
 .boutton {
@@ -122,20 +125,22 @@ h2 {
   background-color: white;
   border-radius: 8px;
   justify-content: center;
-  /* height: 80%; */
-  padding: 25px 20px;
-  width: 13%;
+  padding: 35px 1px;
+  width: 18%;
+
 }
 
 .alone {
   background-color: #23a6f0;
-  padding: 15px 20px;
+  padding: 15px 25px;
   color: #fff;
   border: solid 1px #23a6f0;
   border-radius: 5px;
   text-align: center;
   font-size: 19px;
-  margin-left: 12%;
+  margin-left: 50px;
+  width: 70%;
+  min-width: 20%;
 }
 
 .para {
@@ -147,16 +152,17 @@ h2 {
 .container {
   display: flex;
   justify-content: center;
-  gap: 22rem;
+  gap: 15rem;
   padding-top: 5%;
-  /* padding-left: 10px; */
+  flex-wrap: wrap;
+  width: 100%;
+  min-width: 20%;
 }
 
 form {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  /* padding: 5px auto; */
   border-radius: 2px;
   margin-left: 30px;
   padding-bottom: 50px;
@@ -167,7 +173,6 @@ form {
 input,
 button,
 select {
-  /* margin: 3px; */
   padding: 10px 10px;
   font-family: inherit;
   font-size: inherit;
@@ -178,12 +183,15 @@ select {
 }
 
 select {
-  padding-left: 70px;
+  width: 80%;
+  min-width: 10%;
   justify-content: left;
   color: #7f7f7f;
 }
 
-/* section2 */
+label input {
+  width: 80%;
+}
 
 .para2 {
   text-align: center;
@@ -199,6 +207,7 @@ select {
 }
 
 .icon {
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -213,13 +222,13 @@ select {
 .cadre {
   background-color: #8ec2f2;
   width: 17%;
+  min-width: 2%;
   border-radius: 8px;
 }
 
 .lone {
   color: #23a6f0;
   padding-left: 15px;
-  /* padding-top: 20px; */
 }
 
 .pcadre {
@@ -235,24 +244,25 @@ select {
 }
 
 .all2 {
-  padding-top: 8%;
+  padding-top: 9%;
   display: flex;
-  gap: 5rem;
+  gap: 12rem;
   justify-content: center;
+  line-height: 32px;
+  flex-wrap: wrap;
 }
-
-/* section3 */
 
 .pcadre2 {
   display: flex;
   flex-direction: column;
   border: solid 1px #cec9c9;
-  width: 13%;
+  width: 16vw;
   justify-content: center;
   gap: 1.5rem;
   padding: 30px 30px;
   border-radius: 9px;
   color: #7f7f7f;
+  min-width: 10%;
 }
 
 .nine {
@@ -274,6 +284,7 @@ select {
   padding-left: 15%;
   padding-top: 10%;
   gap: 10rem;
+  flex-wrap: wrap;
 }
 
 .ten {
@@ -301,11 +312,6 @@ select {
 
 .l1 {
   font-size: 30px;
-
-}
-
-h5 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .ima {
@@ -344,20 +350,24 @@ h5 {
 
 .all3 {
   border: solid 1px #23a6f0;
-  width: 14%;
+  width: 18vw;
+  min-width: 8vw;
   border-radius: 5px;
   padding-left: 50px;
   padding-bottom: 20px;
   padding-top: 20px;
-  padding-right: 15px;
+  padding-right: 5px;
+  line-height: 32px;
 }
 
 .but3 {
   background-color: #23a6f0;
-  padding: 20px 65px;
+  padding: 15px 65px;
   text-align: center;
   color: white;
   border: solid 1px #23a6f0;
+  width: 80%;
+  min-width: 20%;
 }
 
 .gris {
@@ -374,44 +384,45 @@ h5 {
 
 .all4 {
   border: solid 1px #23a6f0;
-  width: 14%;
+  width: 20vw;
   border-radius: 5px;
   padding-left: 60px;
   padding-bottom: 25px;
   padding-top: 20px;
   background-color: #252b42;
   color: #fff;
-  margin-top: -45px;
+  margin-top: -65px;
+  line-height: 32px;
 }
 
 .all5 {
-  padding-top: 8%;
-  padding-bottom: 10%;
+  padding-top: 160px;
+  padding-bottom: 95px;
   display: flex;
-  gap: rem;
   justify-content: center;
+  flex-wrap: wrap;
 }
-
-/* section6 */
 
 .class61 {
   display: flex;
   justify-content: center;
-  padding-top: 100px;
-  gap: 18rem;
-  padding-bottom: 400px;
+  gap: 16rem;
+  flex-wrap: wrap;
+  padding: 20px 0 500px 0;
 }
 
 .para4 {
-  border: solid 1px white;
-  background-color: white;
+  border: 1px solid #fff;
+  background-color: #fff;
   justify-content: center;
-  /* height: 80%; */
   padding: 25px 20px;
-  width: 13%;
+  width: 30%;
   padding-left: -1px;
 }
 
+.sect5 {
+  flex-wrap: wrap;
+}
 .div1 {
   display: flex;
   flex-direction: column;
@@ -419,62 +430,62 @@ h5 {
   color: #fff;
 }
 
-/* padding-bottom: 15; */
-
-
-.eleven{
+.eleven {
   font-size: 52px;
-
 }
 
 .sect6 {
   background-color: #252b42;
+  padding: 150px 0;
 }
 
 p {
   line-height: 27px;
 }
 
-/* section7 */
 .sect7 {
-  /* background-color: #fafafa; */
-  /* width: 100%;
-  height: 20%; */
-  margin-top: -300px;
+  margin-top: -350px;
 }
 
 .class71 {
   display: flex;
   justify-content: center;
   line-height: 25px;
-  /* margin-top: -40%; */
 }
-
-/* section8 */
 
 .sect8 {
   display: flex;
-  gap: 5rem;
+  gap: 8rem;
   justify-content: center;
   padding-top: 80px;
   padding-bottom: 80px;
+  flex-wrap: wrap;
 }
 
 .sect9 {
   background-color: #fafafa;
-  padding-top: 500px;
-  margin-top: -490px;
+  padding: 350px 0;
+  margin-top: -450px;
+}
+
+.fives {
+  font-size: 20px;
 }
 
 .class81 {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-
+  gap: 1rem;
 }
 
-.four {
-  color: #7f7f7f;
+.class82 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+sec .four {
+  color: #7f7f7fc1;
 }
 
 .five {
@@ -487,5 +498,5 @@ p {
   padding-top: 30px;
   background-color: #fafafa;
   padding-bottom: 30px;
-  color: #525050;
+  color: #525050bf;
 }
